--- a/template/index.html
+++ b/template/index.html
@@ -1,11 +1,18 @@
 <html>
-  
+
   <head>
-  	<link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="style.css">
   </head>
-  
+
   <body>
-    
+    <div>
+      <h1>Wanted!</h1>
+      <h3>Have you seen this Man?</h3>
+      <img src="https://www.mariowiki.com/images/thumb/2/27/SuperMarioParty_Waluigi.png/1200px-SuperMarioParty_Waluigi.png";img>
+      <p>Description: Height: ~ 7½ ft ~, Arms: 2, Clothes: ~purple~ ~orange~ ~black~</p>
+      <p>If you have any information, please contact 100-000-0010</p>
+      <h2>Reward: $10,000,000</h2>
+      <div>
   </body>
-  
+
 </html>
